[gd_scene load_steps=4 format=2]

[ext_resource path="res://niveles/nivel_10_save_system/thumbnail.tscn" type="PackedScene" id=1]
[ext_resource path="res://res/pyrate_theme.tres" type="Theme" id=2]
[ext_resource path="res://niveles/nivel_10_save_system/slot_dialog_element.gd" type="Script" id=3]

[node name="MarginContainer" type="MarginContainer"]
margin_right = 114.0
margin_bottom = 186.0
rect_min_size = Vector2( 114, 170 )
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_right = 114.0
margin_bottom = 190.0
rect_min_size = Vector2( 0, 190 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Button"]
margin_right = 116.0
margin_bottom = 188.0
mouse_filter = 2
input_pass_on_modal_close_click = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="Button/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 116.0
margin_bottom = 4.0
mouse_filter = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Button/VBoxContainer"]
margin_top = 8.0
margin_right = 116.0
margin_bottom = 26.0
mouse_filter = 2

[node name="VSeparator" type="VSeparator" parent="Button/VBoxContainer/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 28.0
margin_bottom = 18.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Button/VBoxContainer/HBoxContainer"]
margin_left = 32.0
margin_right = 84.0
margin_bottom = 18.0
text = "EMPTY SLOT"

[node name="VSeparator2" type="VSeparator" parent="Button/VBoxContainer/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 88.0
margin_right = 116.0
margin_bottom = 18.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="HBoxContainer5" type="HBoxContainer" parent="Button/VBoxContainer"]
margin_top = 30.0
margin_right = 116.0
margin_bottom = 48.0
mouse_filter = 2

[node name="VSeparator" type="VSeparator" parent="Button/VBoxContainer/HBoxContainer5"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 43.0
margin_bottom = 18.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Button/VBoxContainer/HBoxContainer5"]
margin_left = 47.0
margin_right = 68.0
margin_bottom = 18.0
text = "DATE"

[node name="VSeparator2" type="VSeparator" parent="Button/VBoxContainer/HBoxContainer5"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 72.0
margin_right = 116.0
margin_bottom = 18.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="HSeparator2" type="HSeparator" parent="Button/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 52.0
margin_right = 116.0
margin_bottom = 56.0
mouse_filter = 2
size_flags_vertical = 3

[node name="HBoxContainer4" type="HBoxContainer" parent="Button/VBoxContainer"]
margin_top = 60.0
margin_right = 116.0
margin_bottom = 120.0
mouse_filter = 2

[node name="VSeparator2" type="VSeparator" parent="Button/VBoxContainer/HBoxContainer4"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 9.0
margin_bottom = 60.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="ViewportContainer" type="ViewportContainer" parent="Button/VBoxContainer/HBoxContainer4"]
margin_left = 13.0
margin_right = 103.0
margin_bottom = 60.0
rect_min_size = Vector2( 90, 60 )
mouse_filter = 2
stretch = true

[node name="Viewport" type="Viewport" parent="Button/VBoxContainer/HBoxContainer4/ViewportContainer"]
size = Vector2( 90, 60 )
transparent_bg = true
handle_input_locally = false
msaa = 3
fxaa = true
usage = 0
render_target_update_mode = 3
gui_disable_input = true
gui_snap_controls_to_pixels = false

[node name="TextureRect" parent="Button/VBoxContainer/HBoxContainer4/ViewportContainer/Viewport" instance=ExtResource( 1 )]
flip_v = false

[node name="VSeparator" type="VSeparator" parent="Button/VBoxContainer/HBoxContainer4"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 107.0
margin_right = 116.0
margin_bottom = 60.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="HSeparator3" type="HSeparator" parent="Button/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 124.0
margin_right = 116.0
margin_bottom = 128.0
mouse_filter = 2
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="Button/VBoxContainer"]
margin_top = 132.0
margin_right = 116.0
margin_bottom = 150.0
mouse_filter = 2

[node name="VSeparator" type="VSeparator" parent="Button/VBoxContainer/HBoxContainer2"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 36.0
margin_bottom = 18.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="Label_score2" type="Label" parent="Button/VBoxContainer/HBoxContainer2"]
margin_left = 40.0
margin_right = 67.0
margin_bottom = 18.0
text = "Score:"

[node name="Label_score" type="Label" parent="Button/VBoxContainer/HBoxContainer2"]
margin_left = 71.0
margin_right = 76.0
margin_bottom = 18.0
text = "0"

[node name="VSeparator2" type="VSeparator" parent="Button/VBoxContainer/HBoxContainer2"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 80.0
margin_right = 116.0
margin_bottom = 18.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="HSeparator5" type="HSeparator" parent="Button/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 154.0
margin_right = 116.0
margin_bottom = 158.0
mouse_filter = 2
size_flags_vertical = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="Button/VBoxContainer"]
margin_top = 162.0
margin_right = 116.0
margin_bottom = 180.0
mouse_filter = 2

[node name="VSeparator" type="VSeparator" parent="Button/VBoxContainer/HBoxContainer3"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 15.0
margin_bottom = 18.0
size_flags_horizontal = 3

[node name="Label_time2" type="Label" parent="Button/VBoxContainer/HBoxContainer3"]
margin_left = 19.0
margin_right = 70.0
margin_bottom = 18.0
text = "Time Played:"

[node name="Label_time" type="Label" parent="Button/VBoxContainer/HBoxContainer3"]
margin_left = 74.0
margin_right = 96.0
margin_bottom = 18.0
text = "00:00"

[node name="VSeparator2" type="VSeparator" parent="Button/VBoxContainer/HBoxContainer3"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 100.0
margin_right = 116.0
margin_bottom = 18.0
size_flags_horizontal = 3

[node name="HSeparator4" type="HSeparator" parent="Button/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 184.0
margin_right = 116.0
margin_bottom = 188.0
mouse_filter = 2
size_flags_vertical = 3

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
